# aaltaf

./: .gitignore  CMakeLists.txt  ltlparser.c  ltlparser.h  main.cpp
include/: aaltasolver.h  carchecker.h  utility.h
include/formula/: aalta_formula.h
ltlparser/: utility.h
src/: aaltasolver.cpp  carchecker.cpp  carsolver.cpp  evidence.cpp  ltlfchecker.cpp  solver.cpp  utility.cpp
src/formula/: aalta_formula.cpp  dnf_clause.cpp  dnf_formula.cpp  olg_formula.cpp  olg_item.cpp
src/util/: utility.cpp
submodules/minisat/core/: Dimacs.h  Solver.cc  Solver.h  SolverTypes.h
